Create "Linking Book" and "Descriptive Book" items

--- a/common/src/main/resources/assets/mystcraftages/lang/en_us.json
+++ b/common/src/main/resources/assets/mystcraftages/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.mystcraftages.example_item": "Example Item"
+  "item.mystcraftages.linking_book": "Linking Book",
+  "item.mystcraftages.descriptive_book": "Descriptive Book",
+  "itemGroup.mystcraftages.mystcraft_tab": "Mystcraft: Ages"
 }
