--- a/common/src/main/resources/assets/mystcraftages/lang/en_us.json
+++ b/common/src/main/resources/assets/mystcraftages/lang/en_us.json
@@ -1,5 +1,7 @@
 {
+  "itemGroup.mystcraftages.mystcraft_tab": "Mystcraft: Ages",
+
   "item.mystcraftages.linking_book": "Linking Book",
   "item.mystcraftages.descriptive_book": "Descriptive Book",
-  "itemGroup.mystcraftages.mystcraft_tab": "Mystcraft: Ages"
+  "item.mystcraftages.ink_vial": "Ink Vial"
 }
